[project]
name = "fetch-sentinel"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "geopandas>=1.1.1",
    "h5netcdf>=1.6.4",
    "harmony>=1.2.4098",
    "harmony-py>=0.4.14",
    "helper>=2.5.0",
    "matplotlib>=3.10.6",
    "netcdf4>=1.7.2",
    "numpy>=2.3.3",
    "oauthlib>=3.3.1",
    "pandas>=2.3.2",
    "rasterio>=1.4.3",
    "requests-oauthlib>=2.0.0",
    "requests-toolbelt>=1.0.0",
    "shapely>=2.1.1",
    "xarray>=2025.9.0",
]
